fixed a bug with third box overlapping onto fourth box

--- a/src/css/pages/_Index.scss
+++ b/src/css/pages/_Index.scss
@@ -119,7 +119,6 @@
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
-  height: 1140px;
 
   h3 {
     position: relative;
@@ -210,8 +209,8 @@
   background-position: 53% 50%;
   background-size: cover;
   width: 100%;
-  height: 100vh;
   box-shadow: inset 0 200px 100px black;
+  padding-top: 50px;
 
   h3 {
     color: #ffffff;
